Change metricRelabelings/relabelings settings for SLI/resources to dedicated subkeys
Signed-off-by: Mitsuru Kariya <mitsuru.kariya@nttdata.com>

--- a/charts/kube-prometheus-stack/templates/exporters/kube-api-server/servicemonitor.yaml
+++ b/charts/kube-prometheus-stack/templates/exporters/kube-api-server/servicemonitor.yaml
@@ -18,8 +18,8 @@ spec:
   {{- include "servicemonitor.scrapeLimits" .Values.kubeApiServer.serviceMonitor | nindent 2 }}
   endpoints:
   {{- include "kube-prometheus-stack.kubeApiServer.endpoint" (list $ "") }}
-  {{- if .Values.kubeApiServer.serviceMonitor.slis }}
-  {{- include "kube-prometheus-stack.kubeApiServer.endpoint" (list $ "slis") }}
+  {{- if .Values.kubeApiServer.serviceMonitor.slis.enabled }}
+  {{- include "kube-prometheus-stack.kubeApiServer.endpoint" (list $ "sli") }}
     path: /metrics/slis
   {{- end }}
   jobLabel: {{ .Values.kubeApiServer.serviceMonitor.jobLabel }}
