--- a/charts/kube-prometheus-stack/templates/exporters/kube-controller-manager/servicemonitor.yaml
+++ b/charts/kube-prometheus-stack/templates/exporters/kube-controller-manager/servicemonitor.yaml
@@ -30,7 +30,7 @@ spec:
       - "kube-system"
   endpoints:
   {{- include "kube-prometheus-stack.kubeControllerManager.endpoint" (list $ "") }}
-  {{- if .Values.kubeControllerManager.serviceMonitor.slis }}
+  {{- if .Values.kubeControllerManager.serviceMonitor.slis.enabled }}
   {{- include "kube-prometheus-stack.kubeControllerManager.endpoint" (list $ "slis") }}
     path: /metrics/slis
   {{- end }}
