--- a/charts/kube-prometheus-stack/templates/exporters/kube-scheduler/servicemonitor.yaml
+++ b/charts/kube-prometheus-stack/templates/exporters/kube-scheduler/servicemonitor.yaml
@@ -30,11 +30,11 @@ spec:
       - "kube-system"
   endpoints:
   {{- include "kube-prometheus-stack.kubeScheduler.endpoint" (list $ "") }}
-  {{- if .Values.kubeScheduler.serviceMonitor.slis }}
+  {{- if .Values.kubeScheduler.serviceMonitor.slis.enabled }}
   {{- include "kube-prometheus-stack.kubeScheduler.endpoint" (list $ "slis") }}
     path: /metrics/slis
   {{- end }}
-  {{- if .Values.kubeScheduler.serviceMonitor.resources }}
+  {{- if .Values.kubeScheduler.serviceMonitor.resources.enabled }}
   {{- include "kube-prometheus-stack.kubeScheduler.endpoint" (list $ "resources") }}
     path: /metrics/resources
   {{- end }}
