--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1231,21 +1231,22 @@ kubeApiServer:
     #   replacement: kubernetes.default.svc:443
 
     ## Enable scraping Service Level Indicator (SLI) metrics (/metrics/slis)
-    slis: false
+    slis:
+      enabled: false
 
-    ## SLIs MetricRelabelConfigs to apply to samples after scraping, but before ingestion.
-    ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
-    ##
-    slisMetricRelabelings: []
+      ## SLIs MetricRelabelConfigs to apply to samples after scraping, but before ingestion.
+      ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
+      ##
+      metricRelabelings: []
 
-    ## SLIs RelabelConfigs to apply to samples before scraping
-    ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
-    ##
-    slisRelabelings:
-      - sourceLabels: [__metrics_path__]
-        targetLabel: metrics_path
-    # - sourceLabels: [__meta_kubernetes_pod_node_name]
-    #   targetLabel: nodename
+      ## SLIs RelabelConfigs to apply to samples before scraping
+      ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
+      ##
+      relabelings:
+        - sourceLabels: [__metrics_path__]
+          targetLabel: metrics_path
+      # - sourceLabels: [__meta_kubernetes_pod_node_name]
+      #   targetLabel: nodename
 
     ## Additional labels
     ##
@@ -1565,21 +1566,22 @@ kubeControllerManager:
     #   action: replace
 
     ## Enable scraping Service Level Indicator (SLI) metrics (/metrics/slis)
-    slis: false
+    slis:
+      enabled: false
 
-    ## SLIs MetricRelabelConfigs to apply to samples after scraping, but before ingestion.
-    ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
-    ##
-    slisMetricRelabelings: []
+      ## SLIs MetricRelabelConfigs to apply to samples after scraping, but before ingestion.
+      ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
+      ##
+      metricRelabelings: []
 
-    ## SLIs RelabelConfigs to apply to samples before scraping
-    ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
-    ##
-    slisRelabelings:
-      - sourceLabels: [__metrics_path__]
-        targetLabel: metrics_path
-    # - sourceLabels: [__meta_kubernetes_pod_node_name]
-    #   targetLabel: nodename
+      ## SLIs RelabelConfigs to apply to samples before scraping
+      ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
+      ##
+      relabelings:
+        - sourceLabels: [__metrics_path__]
+          targetLabel: metrics_path
+      # - sourceLabels: [__meta_kubernetes_pod_node_name]
+      #   targetLabel: nodename
 
     ## Additional labels
     ##
@@ -1944,38 +1946,40 @@ kubeScheduler:
     #   action: replace
 
     ## Enable scraping Service Level Indicator (SLI) metrics (/metrics/slis)
-    slis: false
+    slis:
+      enabled: false
 
-    ## MetricRelabelConfigs to apply to samples after scraping, but before ingestion.
-    ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
-    ##
-    slisMetricRelabelings: []
+      ## MetricRelabelConfigs to apply to samples after scraping, but before ingestion.
+      ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
+      ##
+      metricRelabelings: []
 
-    ## RelabelConfigs to apply to samples before scraping
-    ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
-    ##
-    slisRelabelings:
-      - sourceLabels: [__metrics_path__]
-        targetLabel: metrics_path
-    # - sourceLabels: [__meta_kubernetes_pod_node_name]
-    #   targetLabel: nodename
+      ## RelabelConfigs to apply to samples before scraping
+      ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
+      ##
+      relabelings:
+        - sourceLabels: [__metrics_path__]
+          targetLabel: metrics_path
+      # - sourceLabels: [__meta_kubernetes_pod_node_name]
+      #   targetLabel: nodename
 
     ## Enable scraping resources metrics (/metrics/resources)
-    resources: false
+    resources:
+      enabled: false
 
-    ## resources MetricRelabelConfigs to apply to samples after scraping, but before ingestion.
-    ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
-    ##
-    resourcesMetricRelabelings: []
+      ## resources MetricRelabelConfigs to apply to samples after scraping, but before ingestion.
+      ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
+      ##
+      metricRelabelings: []
 
-    ## resources RelabelConfigs to apply to samples before scraping
-    ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
-    ##
-    resourcesRelabelings:
-      - sourceLabels: [__metrics_path__]
-        targetLabel: metrics_path
-    # - sourceLabels: [__meta_kubernetes_pod_node_name]
-    #   targetLabel: nodename
+      ## resources RelabelConfigs to apply to samples before scraping
+      ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
+      ##
+      relabelings:
+        - sourceLabels: [__metrics_path__]
+          targetLabel: metrics_path
+      # - sourceLabels: [__meta_kubernetes_pod_node_name]
+      #   targetLabel: nodename
 
     ## Additional labels
     ##
@@ -2062,21 +2066,22 @@ kubeProxy:
     #   sourceLabels: [__name__]
 
     ## Enable scraping Service Level Indicator (SLI) metrics (/metrics/slis)
-    slis: false
+    slis:
+      enabled: false
 
-    ## MetricRelabelConfigs to apply to samples after scraping, but before ingestion.
-    ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
-    ##
-    slisMetricRelabelings: []
+      ## MetricRelabelConfigs to apply to samples after scraping, but before ingestion.
+      ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
+      ##
+      metricRelabelings: []
 
-    ## RelabelConfigs to apply to samples before scraping
-    ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
-    ##
-    slisRelabelings:
-      - sourceLabels: [__metrics_path__]
-        targetLabel: metrics_path
-    # - sourceLabels: [__meta_kubernetes_pod_node_name]
-    #   targetLabel: nodename
+      ## RelabelConfigs to apply to samples before scraping
+      ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
+      ##
+      relabelings:
+        - sourceLabels: [__metrics_path__]
+          targetLabel: metrics_path
+      # - sourceLabels: [__meta_kubernetes_pod_node_name]
+      #   targetLabel: nodename
 
     ## Additional labels
     ##
