Add comments about the required kubernetes versions to values.yaml
Signed-off-by: Mitsuru Kariya <mitsuru.kariya@nttdata.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1231,6 +1231,10 @@ kubeApiServer:
     #   replacement: kubernetes.default.svc:443
 
     ## Enable scraping Service Level Indicator (SLI) metrics (/metrics/slis)
+    ## Requires kubernetes 1.27 or newer.
+    ## Also be used with kubernetes 1.26, but in that case ComponentSLIs feature-gate must be enabled,
+    ## since the feature-gate is in Alpha state in kubernetes 1.26.
+    ##
     slis:
       enabled: false
 
@@ -1322,6 +1326,9 @@ kubelet:
     resourcePath: "/metrics/resource/v1alpha1"
 
     ## Enable scraping Service Level Indicator (SLI) metrics (/metrics/slis) from kubelet's service
+    ## Requires kubernetes 1.27 or newer.
+    ## Also be used with kubernetes 1.26, but in that case ComponentSLIs feature-gate must be enabled,
+    ## since the feature-gate is in Alpha state in kubernetes 1.26.
     ##
     slis: false
 
@@ -1566,6 +1573,10 @@ kubeControllerManager:
     #   action: replace
 
     ## Enable scraping Service Level Indicator (SLI) metrics (/metrics/slis)
+    ## Requires kubernetes 1.27 or newer.
+    ## Also be used with kubernetes 1.26, but in that case ComponentSLIs feature-gate must be enabled,
+    ## since the feature-gate is in Alpha state in kubernetes 1.26.
+    ##
     slis:
       enabled: false
 
@@ -1946,6 +1957,10 @@ kubeScheduler:
     #   action: replace
 
     ## Enable scraping Service Level Indicator (SLI) metrics (/metrics/slis)
+    ## Requires kubernetes 1.27 or newer.
+    ## Also be used with kubernetes 1.26, but in that case ComponentSLIs feature-gate must be enabled,
+    ## since the feature-gate is in Alpha state in kubernetes 1.26.
+    ##
     slis:
       enabled: false
 
@@ -1964,6 +1979,8 @@ kubeScheduler:
       #   targetLabel: nodename
 
     ## Enable scraping resources metrics (/metrics/resources)
+    ## Requires kubernetes 1.20 or newer.
+    ##
     resources:
       enabled: false
 
@@ -2066,6 +2083,10 @@ kubeProxy:
     #   sourceLabels: [__name__]
 
     ## Enable scraping Service Level Indicator (SLI) metrics (/metrics/slis)
+    ## Requires kubernetes 1.27 or newer.
+    ## Also be used with kubernetes 1.26, but in that case ComponentSLIs feature-gate must be enabled,
+    ## since the feature-gate is in Alpha state in kubernetes 1.26.
+    ##
     slis:
       enabled: false
 
