--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -67,9 +67,9 @@ kubeRBACProxy:
   enableHostPort: false
 
   # Configure Proxy Endpoints Port
-  # This is the port being probed for readiness and MUST be set to an open port
+  # This is the port being probed for readiness
   proxyEndpointsPort: 8888
-  # Configure a hostPort for the http-healthz containerPort. If true, hostPort will be enabled in the container and set to the healthzPort value.
+  # Configure a hostPort. If true, hostPort will be enabled in the container and set to proxyEndpointsPort.
   enableProxyEndpointsHostPort: false
 
   resources: {}
