put prometheus.enabled back as it is a dependency for thanos
Signed-off-by: bogdan-at-adobe <bstancu@adobe.com>

--- a/charts/kube-prometheus-stack/templates/prometheus/secret.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.prometheus.prometheusSpec.thanos.objectStorageConfig }}
+{{- if and .Values.prometheus.enabled .Values.prometheus.prometheusSpec.thanos.objectStorageConfig }}
 apiVersion: v1
 kind: Secret
 metadata:
