[prometheus] Fix indentation of pod affinity
Signed-off-by: James Andrew <jamesandrew@microsoft.com>

--- a/charts/prometheus/templates/sts.yaml
+++ b/charts/prometheus/templates/sts.yaml
@@ -303,7 +303,7 @@ spec:
       affinity:
     {{- end }}
       {{- with .Values.server.affinity }}
-{{ toYaml . | indent 8 }}
+      {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- if eq .Values.server.podAntiAffinity "hard" }}
         podAntiAffinity:
