--- a/charts/prometheus/templates/deploy.yaml
+++ b/charts/prometheus/templates/deploy.yaml
@@ -300,7 +300,7 @@ spec:
       affinity:
     {{- end }}
       {{- with .Values.server.affinity }}
-{{ toYaml . | indent 8 }}
+      {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- if eq .Values.server.podAntiAffinity "hard" }}
         podAntiAffinity:
