--- a/charts/prometheus-mysql-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-mysql-exporter/templates/servicemonitor.yaml
@@ -86,4 +86,5 @@ spec:
   {{- if .Values.serviceMonitor.relabelings }}
       relabelings: {{ toYaml .Values.serviceMonitor.relabelings | nindent 8 }}
   {{- end }}
+  {{- end }}
 {{- end }}
