Ci: Add group rules for kube-prometheus-stack
Signed-off-by: Jan-Otto Kröpke <github@jkroepke.de>

--- a/renovate.json
+++ b/renovate.json
@@ -3,5 +3,44 @@
   "extends": [
     "config:recommended"
   ],
-  "dependencyDashboardApproval": true
+  "dependencyDashboardApproval": true,
+  "packageRules": [
+    {
+      "matchPackagePatterns": [
+        "*"
+      ],
+      "matchPaths": [
+        ".github/workflows/**"
+      ],
+      "groupName": "github-workflow dependendcy updates"
+    },
+    {
+      "matchPackagePatterns": [
+        "*"
+      ],
+      "matchPaths": [
+        "charts/kube-prometheus-stack/**"
+      ],
+      "matchUpdateTypes": [
+        "major"
+      ],
+      "groupName": "kube-prometheus-stack dependency major updates"
+    },
+    {
+      "matchPackagePatterns": [
+        "*"
+      ],
+      "matchPaths": [
+        "charts/kube-prometheus-stack/**"
+      ],
+      "matchUpdateTypes": [
+        "minor",
+        "patch",
+        "digest",
+        "pin",
+        "pinDigest"
+      ],
+      "groupName": "kube-prometheus-stack dependency non-major updates"
+    }
+  ]
 }
