--- a/renovate.json
+++ b/renovate.json
@@ -12,6 +12,7 @@
       "matchPaths": [
         ".github/workflows/**"
       ],
+      "commitMessagePrefix": "[CI] ",
       "groupName": "github-workflow dependendcy updates"
     },
     {
@@ -24,6 +25,7 @@
       "matchUpdateTypes": [
         "major"
       ],
+      "commitMessagePrefix": "[kube-prometheus-stack] ",
       "groupName": "kube-prometheus-stack dependency major updates"
     },
     {
@@ -40,6 +42,7 @@
         "pin",
         "pinDigest"
       ],
+      "commitMessagePrefix": "[kube-prometheus-stack] ",
       "groupName": "kube-prometheus-stack dependency non-major updates"
     }
   ]
