--- a/renovate.json
+++ b/renovate.json
@@ -13,7 +13,7 @@
         ".github/workflows/**"
       ],
       "commitMessagePrefix": "[CI] ",
-      "groupName": "github-workflow dependendcy updates"
+      "groupName": "github-workflow dependency updates"
     },
     {
       "matchPackagePatterns": [
