[CI] Add group rules for kube-prometheus-stack (#4363)
Co-authored-by: Gabriel Martinez <19713226+GMartinez-Sisti@users.noreply.github.com>

--- a/renovate.json
+++ b/renovate.json
@@ -3,5 +3,47 @@
   "extends": [
     "config:recommended"
   ],
-  "dependencyDashboardApproval": true
+  "dependencyDashboardApproval": true,
+  "packageRules": [
+    {
+      "matchPackagePatterns": [
+        "*"
+      ],
+      "matchPaths": [
+        ".github/workflows/**"
+      ],
+      "commitMessagePrefix": "[CI] ",
+      "groupName": "github-workflow dependency updates"
+    },
+    {
+      "matchPackagePatterns": [
+        "*"
+      ],
+      "matchPaths": [
+        "charts/kube-prometheus-stack/**"
+      ],
+      "matchUpdateTypes": [
+        "major"
+      ],
+      "commitMessagePrefix": "[kube-prometheus-stack] ",
+      "groupName": "kube-prometheus-stack dependency major updates"
+    },
+    {
+      "matchPackagePatterns": [
+        "*"
+      ],
+      "matchPaths": [
+        "charts/kube-prometheus-stack/**"
+      ],
+      "matchUpdateTypes": [
+        "minor",
+        "patch",
+        "digest",
+        "pin",
+        "pinDigest"
+      ],
+      "commitMessagePrefix": "[kube-prometheus-stack] ",
+      "groupName": "kube-prometheus-stack dependency non-major updates"
+    }
+  ]
 }
