Revert additionalMetricsRelabels to map
Signed-off-by: Sheikh-Abubaker <sheikhabubaker761@gmail.com>

--- a/charts/prometheus-blackbox-exporter/values.yaml
+++ b/charts/prometheus-blackbox-exporter/values.yaml
@@ -271,7 +271,7 @@ serviceMonitor:
   ##
   selfMonitor:
     enabled: false
-    additionalMetricsRelabels: []
+    additionalMetricsRelabels: {}
     additionalRelabeling: []
     labels: {}
     path: /metrics
