--- a/charts/prometheus-pgbouncer-exporter/values.yaml
+++ b/charts/prometheus-pgbouncer-exporter/values.yaml
@@ -4,7 +4,8 @@ replicaCount: 1
 
 image:
   repository: quay.io/prometheuscommunity/pgbouncer-exporter
-  tag: latest
+  # if not set appVersion field from Chart.yaml is used
+  tag: ""
   pullPolicy: IfNotPresent
 
   ## Optionally specify an array of imagePullSecrets.
