adding support for azmon

--- a/charts/prometheus-elasticsearch-exporter/templates/podmonitor.yaml
+++ b/charts/prometheus-elasticsearch-exporter/templates/podmonitor.yaml
@@ -1,7 +1,11 @@
 {{- if and .Values.podMonitor.enabled .Values.serviceMonitor.enabled }}
 {{- fail "Either .Values.podMonitor.enabled or .Values.serviceMonitor.enabled can be enabled at a time, but not both." }}
 {{- else if .Values.podMonitor.enabled }}
+{{- if .Values.azuremanagedprometheus.use_azuremanagedprometheus }}
+apiVersion: azmonitoring.coreos.com/v1
+{{- else }}
 apiVersion: monitoring.coreos.com/v1
+{{- end }}
 kind: PodMonitor
 metadata:
   name: {{ template "elasticsearch-exporter.fullname" . }}
