--- a/charts/prometheus-elasticsearch-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-elasticsearch-exporter/templates/servicemonitor.yaml
@@ -1,6 +1,10 @@
 {{- if .Values.serviceMonitor.enabled }}
 ---
+{{- if .Values.azuremanagedprometheus.use_azuremanagedprometheus }}
+apiVersion: azmonitoring.coreos.com/v1
+{{- else }}
 apiVersion: monitoring.coreos.com/v1
+{{- end }}
 kind: ServiceMonitor
 metadata:
   name: {{ template "elasticsearch-exporter.fullname" . }}
