--- a/charts/prometheus-elasticsearch-exporter/values.yaml
+++ b/charts/prometheus-elasticsearch-exporter/values.yaml
@@ -242,6 +242,7 @@ serviceMonitor:
   ## https://github.com/coreos/prometheus-operator
   ##
   enabled: false
+  apiVersion: "monitoring.coreos.com/v1"
   #  namespace: monitoring
   labels: {}
   interval: 10s
@@ -258,6 +259,7 @@ podMonitor:
   ## https://prometheus-operator.dev/docs/operator/api/#monitoring.coreos.com/v1.PodMonitor
   ##
   enabled: false
+  apiVersion: "monitoring.coreos.com/v1"
   namespace: ""
   labels: {}
   interval: 60s
