--- a/charts/prometheus-kafka-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-kafka-exporter/templates/servicemonitor.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.prometheus.serviceMonitor.enabled }}
-apiVersion: monitoring.coreos.com/v1
+apiVersion: {{ .Values.prometheus.serviceMonitor.apiVersion }}
 kind: ServiceMonitor
 metadata:
   name: {{ include "prometheus-kafka-exporter.fullname" . }}
