--- a/charts/prometheus-kafka-exporter/values.yaml
+++ b/charts/prometheus-kafka-exporter/values.yaml
@@ -101,6 +101,7 @@ prometheus:
   serviceMonitor:
     enabled: false
     namespace: monitoring
+    apiVersion: "monitoring.coreos.com/v1"
     interval: "30s"
     # If serviceMonitor is enabled and you want prometheus to automatically register
     # target using serviceMonitor, add additionalLabels with prometheus release name
