--- a/charts/prometheus-elasticsearch-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-elasticsearch-exporter/templates/servicemonitor.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.serviceMonitor.enabled }}
+{{- if .Values.serviceMonitor.enabled }}
 ---
 {{- if .Capabilities.APIVersions.Has .Values.podMonitor.apiVersion}}
 apiVersion: {{ .Values.serviceMonitor.apiVersion }}
