--- a/charts/prometheus-pgbouncer-exporter/Chart.yaml
+++ b/charts/prometheus-pgbouncer-exporter/Chart.yaml
@@ -1,23 +1,23 @@
 apiVersion: v2
-appVersion: "1.18.0"
+appVersion: "v0.7.0"
 description: A Helm chart for prometheus pgbouncer-exporter
 name: prometheus-pgbouncer-exporter
-version: 0.1.1
+version: 0.2.0
 home: https://github.com/prometheus-community/pgbouncer_exporter
 sources:
-- https://github.com/prometheus-community/pgbouncer_exporter
+  - https://github.com/prometheus-community/pgbouncer_exporter
 keywords:
-- pgbouncer
-- prometheus
-- exporter
+  - pgbouncer
+  - prometheus
+  - exporter
 maintainers:
-- email: stewart.shea@gmail.com
-  name: stewartshea
-- email: rootsandtrees@posteo.de
-  name: zeritti
+  - email: stewart.shea@gmail.com
+    name: stewartshea
+  - email: rootsandtrees@posteo.de
+    name: zeritti
 type: application
 dependencies:
-- name: postgresql
-  version: "~12.2.2"
-  repository: https://charts.bitnami.com/bitnami
-  condition: postgresql.enabled
+  - name: postgresql
+    version: "~15.0.0"
+    repository: https://charts.bitnami.com/bitnami
+    condition: postgresql.enabled
