This PR enables setting annotations for the secret.
Signed-off-by: Dasha Bulanova <daria.bulanova@hellofresh.com>

--- a/charts/prometheus-blackbox-exporter/values.yaml
+++ b/charts/prometheus-blackbox-exporter/values.yaml
@@ -249,6 +249,9 @@ podAnnotations: {}
 # Annotations for the Deployment
 deploymentAnnotations: {}
 
+#Annotations for the Secret
+secretAnnotations: {}
+
 # Hostaliases allow to add additional DNS entries to be injected directly into pods.
 # This will take precedence over your implemented DNS solution
 hostAliases: []
