node-exporter & windows-exporter default ignore node taints
Signed-off-by: BobDu <i@bobdu.cc>

--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -388,8 +388,7 @@ nodeSelector:
 terminationGracePeriodSeconds: null
 
 tolerations:
-  - effect: NoSchedule
-    operator: Exists
+  - operator: Exists
 
 # Enable or disable container termination message settings
 # https://kubernetes.io/docs/tasks/debug/debug-application/determine-reason-pod-failure/
