--- a/charts/prometheus-windows-exporter/values.yaml
+++ b/charts/prometheus-windows-exporter/values.yaml
@@ -286,8 +286,7 @@ nodeSelector:
   #  kubernetes.io/arch: amd64
 
 tolerations:
-  - effect: NoSchedule
-    operator: Exists
+  - operator: Exists
 
 ## Assign a PriorityClassName to pods if set
 # priorityClassName: ""
