[prometheus-elasticsearch-exporter] add ability to customize apiversion for pod/service monitor (#4388)
* Adding support for azure managed prometheus

Signed-off-by: Rashmi Chandrashekar <rashmy@microsoft.com>

* addressing comments

Signed-off-by: Rashmi Chandrashekar <rashmy@microsoft.com>

* removing azmon value flag

Signed-off-by: Rashmi Chandrashekar <rashmy@microsoft.com>

* removing add

Signed-off-by: Rashmi Chandrashekar <rashmy@microsoft.com>

* removing checks

Signed-off-by: Rashmi Chandrashekar <rashmy@microsoft.com>

---------

Signed-off-by: Rashmi Chandrashekar <rashmy@microsoft.com>

--- a/charts/prometheus-elasticsearch-exporter/templates/podmonitor.yaml
+++ b/charts/prometheus-elasticsearch-exporter/templates/podmonitor.yaml
@@ -1,7 +1,7 @@
 {{- if and .Values.podMonitor.enabled .Values.serviceMonitor.enabled }}
 {{- fail "Either .Values.podMonitor.enabled or .Values.serviceMonitor.enabled can be enabled at a time, but not both." }}
 {{- else if .Values.podMonitor.enabled }}
-apiVersion: monitoring.coreos.com/v1
+apiVersion: {{ .Values.podMonitor.apiVersion }}
 kind: PodMonitor
 metadata:
   name: {{ template "elasticsearch-exporter.fullname" . }}
