[prometheus-json-exporter]: Allow additional container args and service monitor relabelings
Signed-off-by: Faisal K <khalique.faisal@gmail.com>

--- a/charts/prometheus-json-exporter/templates/deployment.yaml
+++ b/charts/prometheus-json-exporter/templates/deployment.yaml
@@ -42,6 +42,13 @@ spec:
       {{- end }}
       containers:
         - name: {{ .Chart.Name }}
+          {{- if .Values.extraArgs }}
+          args:
+          {{- range .Values.extraArgs }}
+          - {{ .name | quote }}
+          - {{ .value | quote }}
+          {{- end }}
+          {{- end }}
           {{- with .Values.environmentVariables }}
           env:
             {{- toYaml . | nindent 12}}
