--- a/charts/prometheus-json-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-json-exporter/templates/servicemonitor.yaml
@@ -38,6 +38,11 @@ spec:
       - targetLabel: {{ $targetLabel }}
         replacement: {{ $replacement }}
         {{- end }}
+    {{- $relabelings := .additionalRelabels | default $.Values.serviceMonitor.defaults.additionalRelabels }}
+    {{- if $relabelings }}
+    relabelings:
+    {{- toYaml $relabelings | nindent 6 }}
+    {{- end }}
   jobLabel: "{{ $.Release.Name }}"
   selector:
     matchLabels:
