Updates and incorporating review comments
Signed-off-by: Faisal K <khalique.faisal@gmail.com>

--- a/charts/prometheus-json-exporter/templates/deployment.yaml
+++ b/charts/prometheus-json-exporter/templates/deployment.yaml
@@ -38,13 +38,13 @@ spec:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       {{- with .Values.extraInitContainers }}
       initContainers:
-        {{ toYaml . | nindent 8 }}
+        {{- toYaml . | nindent 8 }}
       {{- end }}
       containers:
         - name: {{ .Chart.Name }}
-          {{- if .Values.extraArgs }}
+          {{- with .Values.extraArgs }}
           args:
-          {{- range .Values.extraArgs }}
+          {{- range . }}
           - {{ .name | quote }}
           - {{ .value | quote }}
           {{- end }}
