--- a/charts/prometheus-json-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-json-exporter/templates/servicemonitor.yaml
@@ -38,10 +38,9 @@ spec:
       - targetLabel: {{ $targetLabel }}
         replacement: {{ $replacement }}
         {{- end }}
-    {{- $relabelings := .additionalRelabels | default $.Values.serviceMonitor.defaults.additionalRelabels }}
-    {{- if $relabelings }}
+    {{- with .additionalRelabels | default $.Values.serviceMonitor.defaults.additionalRelabels }}
     relabelings:
-    {{- toYaml $relabelings | nindent 6 }}
+    {{- toYaml . | nindent 6 }}
     {{- end }}
   jobLabel: "{{ $.Release.Name }}"
   selector:
