--- a/charts/prometheus-blackbox-exporter/templates/configmap.yaml
+++ b/charts/prometheus-blackbox-exporter/templates/configmap.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: {{ template "prometheus-blackbox-exporter.namespace" . }}
   labels:
     {{- include "prometheus-blackbox-exporter.labels" . | nindent 4 }}
-  {{- if and .Values.secretConfig (not (empty .Values.secretAnnotations)) }}
+  {{- if and .Values.secretConfig .Values.secretAnnotations }}
   annotations:
     {{- toYaml .Values.secretAnnotations | nindent 4 }}
   {{- end }}
