--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -749,15 +749,15 @@ alertmanager:
     ## Storage is the definition of how storage will be used by the Alertmanager instances.
     ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/user-guides/storage.md
     ##
-    storage: {}
-     volumeClaimTemplate:
-       spec:
-         storageClassName: gluster
-         accessModes: ["ReadWriteOnce"]
-         resources:
-           requests:
-             storage: 1Gi
-         selector: {}
+    storage:
+      volumeClaimTemplate:
+        spec:
+          storageClassName: "gluster"
+          accessModes: ["ReadWriteOnce"]
+          resources:
+            requests:
+              storage: "1Gi"
+        selector: {}
 
 
     ## The external URL the Alertmanager instances will be available under. This is necessary to generate correct URLs. This is necessary if Alertmanager is not served from root of a DNS name. string  false
