Updated prometheus-node-exporter helm chart to allow you to change the Kubernetes service port seperately from the container port. fixes #4414
Signed-off-by: Adam Rahja <arahja@gmail.com>

--- a/charts/prometheus-node-exporter/templates/service.yaml
+++ b/charts/prometheus-node-exporter/templates/service.yaml
@@ -17,7 +17,7 @@ spec:
 {{- end }}
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
+    - port: {{ .Values.service.servicePort | default .Values.service.port }}
       {{- if ( and (eq .Values.service.type "NodePort" ) (not (empty .Values.service.nodePort)) ) }}
       nodePort: {{ .Values.service.nodePort }}
       {{- end }}
