--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -88,6 +88,7 @@ service:
   enabled: true
   type: ClusterIP
   port: 9100
+  servicePort: ""
   targetPort: 9100
   nodePort:
   portName: metrics
