[prometheus-pushgateway] Support dual stack clusters (#4424)
* feat: add support for dual stack clusters

Signed-off-by: Ludovic Ortega <ludovic.ortega@adminafk.fr>

* fix: reuse code from node-exporter chart

Signed-off-by: Ludovic Ortega <ludovic.ortega@adminafk.fr>

* Update charts/prometheus-pushgateway/templates/service.yaml

Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Ludovic Ortega <mastership@hotmail.fr>

---------

Signed-off-by: Ludovic Ortega <ludovic.ortega@adminafk.fr>
Signed-off-by: Ludovic Ortega <mastership@hotmail.fr>
Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>

--- a/charts/prometheus-pushgateway/templates/service.yaml
+++ b/charts/prometheus-pushgateway/templates/service.yaml
@@ -19,6 +19,10 @@ spec:
   {{ else if and .Values.runAsStatefulSet (not (has .Values.service.type $stsNoHeadlessSvcTypes)) }}
   clusterIP: None # Headless service
   {{- end }}
+  {{- if .Values.service.ipDualStack.enabled }}
+  ipFamilies: {{ toYaml .Values.service.ipDualStack.ipFamilies | nindent 4 }}
+  ipFamilyPolicy: {{ .Values.service.ipDualStack.ipFamilyPolicy }}
+  {{- end }}
   type: {{ .Values.service.type }}
   {{- with .Values.service.loadBalancerIP }}
   loadBalancerIP: {{ . }}
