--- a/charts/prometheus-pushgateway/values.yaml
+++ b/charts/prometheus-pushgateway/values.yaml
@@ -29,6 +29,11 @@ service:
   # Optional - Can be used for headless if value is "None"
   clusterIP: ""
 
+  ipDualStack:
+    enabled: false
+    ipFamilies: ["IPv6", "IPv4"]
+    ipFamilyPolicy: "PreferDualStack"
+
   loadBalancerIP: ""
   loadBalancerSourceRanges: []
 
