Apply suggestions from code review
Keeping to better Helm style

Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Petar Ivanković Milošević <pero.milosev@yahoo.com>

--- a/charts/prometheus/templates/cm.yaml
+++ b/charts/prometheus/templates/cm.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-{{- with .Values.server }}
+{{- with .Values.server.configMapAnnotations }}
   annotations:
-    {{- toYaml .configMapAnnotations | nindent 4 }}
+    {{- toYaml . | nindent 4 }}
 {{- end }}
   labels:
     {{- include "prometheus.server.labels" . | nindent 4 }}
