[prometheus] Fix configMapAnnotations for Prometheus server (#4432)
* apply cm.yaml fix

Signed-off-by: Petar Ivankovic Milosevic <pero.milosev@yahoo.com>

* bump chart version

Signed-off-by: Petar Ivankovic Milosevic <pero.milosev@yahoo.com>

* Apply suggestions from code review

Keeping to better Helm style

Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Petar Ivanković Milošević <pero.milosev@yahoo.com>

---------

Signed-off-by: Petar Ivankovic Milosevic <pero.milosev@yahoo.com>
Signed-off-by: Petar Ivanković Milošević <pero.milosev@yahoo.com>
Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>

--- a/charts/prometheus/templates/cm.yaml
+++ b/charts/prometheus/templates/cm.yaml
@@ -4,7 +4,7 @@ kind: ConfigMap
 metadata:
 {{- with .Values.server.configMapAnnotations }}
   annotations:
-    {{- toYaml .Values.server.configMapAnnotations | nindent 4 }}
+    {{- toYaml . | nindent 4 }}
 {{- end }}
   labels:
     {{- include "prometheus.server.labels" . | nindent 4 }}
