--- a/charts/prometheus-blackbox-exporter/values.yaml
+++ b/charts/prometheus-blackbox-exporter/values.yaml
@@ -278,6 +278,8 @@ serviceMonitor:
     additionalRelabeling: []
     labels: {}
     path: /metrics
+    scheme: http
+    tlsConfig: {}
     interval: 30s
     scrapeTimeout: 30s
     ## Port can be defined by assigning a value for the port key below
@@ -469,5 +471,7 @@ configReloader:
       additionalMetricsRelabels: {}
       additionalRelabeling: []
       path: /metrics
+      scheme: http
+      tlsConfig: {}
       interval: 30s
       scrapeTimeout: 30s
