--- a/charts/jiralert/values.yaml
+++ b/charts/jiralert/values.yaml
@@ -29,6 +29,9 @@ extraVolumeMounts: []
 # -- Additional Volumes
 extraVolumes: []
 
+# -- Additional env for jiralert pods
+env: {}
+
 # -- Additional envFrom for jiralert pods
 envFrom: {}
 
