--- a/charts/jiralert/templates/deployment.yaml
+++ b/charts/jiralert/templates/deployment.yaml
@@ -67,7 +67,7 @@ spec:
           {{- end }}
         {{- with .Values.env }}
           env:
-          {{- range $key, $value := $.Values.env }}
+          {{- range $key, $value := . }}
             - name: {{ $key }}
               value: {{ $value | quote }}
           {{- end }}
