[prometheus-pushgateway]: add extraDeploy for auxiliary K8s objects
Signed-off-by: gasmick <33287410+gasmick@users.noreply.github.com>

--- a/charts/prometheus-pushgateway/values.yaml
+++ b/charts/prometheus-pushgateway/values.yaml
@@ -358,3 +358,6 @@ networkPolicy: {}
   #   - podSelector:
   #       matchLabels:
   #         app: myapp
+
+# Array of extra K8s objects to deploy (evaluated as a template)
+extraDeploy: []
