Allow setting environment variables
- Add optional envFrom sections to DaemonSet and Deployment

Signed-off-by: Karsten Stöckmann <karsten.stoeckmann@bewotec.de>

--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -127,6 +127,8 @@ podAnnotations: {}
 extraArgs: []
 #  --history.limit=1000
 
+envFrom: []
+
 replicas: 1
 ## Monitors ConfigMap changes and POSTs to a URL
 ## Ref: https://github.com/jimmidyson/configmap-reload
